--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,5 +1,5 @@
 .title {
-  font-family: Greycliff CF, var(--mantine-font-family);
+  font-family: "Greycliff CF", var(--mantine-font-family);
   font-weight: 900;
 }
 
